--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <header class="sticky top-0 left-0 right-0">
         <div>
             <nav class="flex justify-center items-center gap-3 p-2  h-[60px] bg-[#A5E3B9] ">
-                <p>Start a free trial and enjoy 3 months of Shopify for $1/month on select plans.</p>
+                <p class="text-center">Start a free trial and enjoy 3 months of Shopify for $1/month on select plans.
+                </p>
                 <button>Sign up now <span><i class="fa-solid fa-xmark"></i></span></button>
             </nav>
             <nav class=" h-[80px]  bg-[#002D2D]">
