--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <h2 class="text-[#242727] text-[24px] md:text-[30px] lg:text-[34px] font-bold-sm">Themes</h2>
                     <p class="text-[#242727] text-[18px] md:text-[20px] lg:text-[22px]">Select from hundreds of
                         customizable templates crafted by a community of world-class designers..</p>
-                    <p class="text-[#2ab582]] text-[18px] md:text-[20px] lg:text-[22px]">Explore more Themes
+                    <p class="text-[#2ab582] text-[18px] md:text-[20px] lg:text-[22px]">Explore more Themes
                         <span><i class="fa-solid fa-arrow-right text-black"></i></span>
                     </p>
                 </div>
@@ -191,6 +191,249 @@
             </div>
         </section>
         <!-- Connect end -->
+
+        <!-- Connect -->
+        <section class="custom-container py-[10px] lg:py-[80px] md:py-[60px] ">
+            <div class="grid grid-cols-1 lg:grid-cols-2 justify-between py-8 items-center gap-6">
+
+                <div class="w-full rounded-xl bg-[#C6F0FC] flex items-center justify-center p-[40px]">
+                    <img class="w-full" src="./images/media.png" alt="media">
+                </div>
+                <div class="h-full flex flex-col gap-4 lg:gap-[40px]  py-[40px] lg:py-[60px] ">
+                    <h2 class="text-[#242727] text-[24px] md:text-[30px] lg:text-[34px] font-bold-sm">Everything you
+                        need to succeed</h2>
+                    <p class="text-[#343737] text-[18px] md:text-[20px] lg:text-[22px]">Manage inventory, track
+                        payments, and view real-time business insights from a single dashboard. We’ve built all the
+                        tools you need, so you can focus on building your business.</p>
+                    <p class="text-[#2ab582] text-[18px] md:text-[20px] lg:text-[22px]">Do more from day one
+                        <span><i class="fa-solid fa-arrow-right text-black"></i></span>
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Connect end -->
+
+        <!-- Ceo -->
+        <section class="custom-container py-[10px] lg:py-[80px] md:py-[60px] ">
+            <div>
+                <div class="grid grid-cols-1 lg:grid-cols-2 justify-between py-8 items-center gap-6">
+                    <div class="h-full flex flex-col gap-4 lg:gap-[40px]  py-[40px] lg:py-[60px] ">
+                        <h2 class="text-[#242727] text-[18px] md:text-[20px] lg:text-[24px] font-bold-sm"> Meet the
+                            merchants who chose Shopify</h2>
+                        <h1 class="text-[#242727] text-[24px] md:text-[32px] lg:text-[38px] font-bold-sm">“We’ve been
+                            able
+                            to build something in 3 years that a lot of brands haven’t actually gotten
+                            to
+                            in 10
+                            years.”</h1>
+                        <h2 class="text-[#242727] text-[18px] md:text-[20px] lg:text-[24px] font-bold-sm">Chioma |
+                            Co-Founder & CEO</h2>
+                    </div>
+                    <div class="w-full rounded-xl flex items-center justify-center p-[40px]">
+                        <img class="w-full" src="./images/ceo.png" alt="ceo">
+                    </div>
+                </div>
+
+            </div>
+            <div class="flex gap-2 items-center">
+
+                <span class="bg-black rounded-full p-2 flex "><i class="fa-solid fa-arrow-left text-white"></i></span>
+                <span class="bg-black rounded-full p-2 flex "><i class="fa-solid fa-arrow-right text-white"></i></span>
+            </div>
+        </section>
+        <!-- Ceo end-->
+
+        <!-- Help -->
+        <section class=" py-[10px] lg:py-[80px] md:py-[60px] bg-[#FBF7ED] ">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 p-4 gap-4">
+                <div class="flex flex-col g-2 p-6 justify-between">
+                    <h1
+                        class="text-[#242727] text-[24px] md:text-[30px] lg:text-[64px] font-bold-sm lg:w-[600px] lg:ml-4 ">
+                        The
+                        help you
+                        need,
+                        when you need it</h1>
+                    <div>
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 p-4 gap-4">
+                            <div class=" py-5 flex flex-col gap-4 ">
+                                <h2 class="text-[#242727] text-[24px] md:text-[30px] lg:text-[34px] font-bold-sm">
+                                    Shopify Blog
+                                </h2>
+                                <p class="text-[#242727] text-[18px] md:text-[20px] lg:text-[22px]">Get all the
+                                    marketing and business strategy tips you need to help you run an online business.
+                                </p>
+                                <p class="text-[#2ab582] text-[18px] md:text-[20px] lg:text-[22px]">Read
+                                    <span><i class="fa-solid fa-arrow-right text-black"></i></span>
+                                </p>
+                            </div>
+                            <div class=" py-5 flex flex-col gap-4 ">
+                                <h2 class="text-[#242727] text-[24px] md:text-[30px] lg:text-[34px] font-bold-sm">
+                                    Shopify Blog
+                                </h2>
+                                <p class="text-[#242727] text-[18px] md:text-[20px] lg:text-[22px]">Get all the
+                                    marketing and business strategy tips you need to help you run an online business.
+                                </p>
+                                <p class="text-[#2ab582] text-[18px] md:text-[20px] lg:text-[22px]">Read
+                                    <span><i class="fa-solid fa-arrow-right text-black"></i></span>
+                                </p>
+                            </div>
+                            <div class=" py-5 flex flex-col gap-4 ">
+                                <h2 class="text-[#242727] text-[24px] md:text-[30px] lg:text-[34px] font-bold-sm">
+                                    Shopify Blog
+                                </h2>
+                                <p class="text-[#242727] text-[18px] md:text-[20px] lg:text-[22px]">Get all the
+                                    marketing and business strategy tips you need to help you run an online business.
+                                </p>
+                                <p class="text-[#2ab582] text-[18px] md:text-[20px] lg:text-[22px]">Read
+                                    <span><i class="fa-solid fa-arrow-right text-black"></i></span>
+                                </p>
+                            </div>
+                            <div class=" py-5 flex flex-col gap-4 ">
+                                <h2 class="text-[#242727] text-[24px] md:text-[30px] lg:text-[34px] font-bold-sm">
+                                    Shopify Blog
+                                </h2>
+                                <p class="text-[#242727] text-[18px] md:text-[20px] lg:text-[22px]">Get all the
+                                    marketing and business strategy tips you need to help you run an online business.
+                                </p>
+                                <p class="text-[#2ab582] text-[18px] md:text-[20px] lg:text-[22px]">Read
+                                    <span><i class="fa-solid fa-arrow-right text-black"></i></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full">
+                    <img class="w-full" src="./images/help.png" alt="help">
+                </div>
+            </div>
+        </section>
+        <!-- Help end -->
+
+        <section class="custom-container py-[10px] lg:py-[80px] md:py-[60px] ">
+            <div class="flex items-center justify-center gap-4 flex-col">
+                <h1 class="text-[#242727] text-[28px] md:text-[40px] lg:text-[48px] font-bold-sm">Grow your business
+                    here</h1>
+                <p
+                    class="text-[#3f4141] text-[18px] md:text-[20px] lg:text-[24px] font-bold-sm lg:w-[800px] text-center">
+                    Whether
+                    you want to
+                    sell products down the street or around the world, we have all the tools you need
+                </p>
+                <button
+                    class="bg-[#008060] border-[2px] border-transparent rounded-lg p-3 text-black hover:bg-transparent hover:border-[#008060] ">Start
+                    free
+                    trial</button>
+            </div>
+        </section>
+
+
+        <!-- Footer -->
+        <footer class=" bg-[#004C3F]">
+            <nav class="custom-container">
+                <div class="border-b-[2px] border-b-[#33e2c5] py-4 items-center flex flex-wrap">
+                    <div class=" lg:block hidden">
+                        <ul class=" gap-5 flex">
+                            <li class="text-[#ffffff] text-[18px] md:text-[20px] lg:text-[24px]"><a href="#">About</a>
+                            </li>
+                            <li class="text-[#ffffff] text-[18px] md:text-[20px] lg:text-[24px]"><a href="#">Careers</a>
+                            </li>
+                            <li class="text-[#ffffff] text-[18px] md:text-[20px] lg:text-[24px]"><a href="#">Press and
+                                    Media</a></li>
+                            <li class="text-[#ffffff] text-[18px] md:text-[20px] lg:text-[24px]"><a href="#">Shopify
+                                    Plus</a></li>
+                            <li class="text-[#ffffff] text-[18px] md:text-[20px] lg:text-[24px]"><a href="#">Sitemap</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lg:hidden block">
+                        <i class="fa-solid fa-circle-question text-white text-[22px]"></i>
+                        <i class="fa-solid fa-briefcase  text-white text-[22px]"></i>
+                        <i class="fa-solid fa-globe  text-white text-[22px]"></i>
+                        <i class="fa-brands fa-shopify  text-white text-[22px]"></i>
+                        <i class="fa-solid fa-location-dot text-white text-[22px]"></i>
+                    </div>
+                </div>
+
+                <div class="flex justify-between flex-wrap pt-6 pb-3">
+                    <ul class="flex gap-3 flex-col">
+                        <li class="text-[22px] text-white"><a href="#">Online store</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Sell online</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Examples</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Website builder</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Online retail</a></li>
+                    </ul>
+                    <ul class="flex gap-3 flex-col">
+                        <li class="text-[22px] text-white"><a href="#">Ecommerce website</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Domain names</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Shopping cart</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Ecommerce hosting</a></li>
+                    </ul>
+                    <ul class="flex gap-3 flex-col">
+                        <li class="text-[22px] text-white"><a href="#">Mobile commerce</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Online store builder</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Dropshipping Business</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Store themes</a></li>
+                    </ul>
+                    <ul class="flex gap-3 flex-col">
+                        <li class="text-[22px] text-white"><a href="#">Point of sale</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Point of sale</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Features</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Hardware</a></li>
+                    </ul>
+                    <ul class="flex gap-3 flex-col">
+                        <li class="text-[22px] text-white"><a href="#">Support</a></li>
+                        <li class="text-[20px] text-white"><a href="#">24/7 support</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Shopify Help Center</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Shopify Community</a></li>
+                        <li class="text-[20px] text-white"><a href="#">API documentation</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Free tools</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Free stock photos</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Websites for sale</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Logo Maker</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Business name generator</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Free stock photos</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Research</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Legal</a></li>
+                    </ul>
+                    <ul class="flex gap-3 flex-col">
+                        <li class="text-[22px] text-white"><a href="#">Shopify</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Contact</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Partner program</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Affiliate program</a></li>
+                        <li class="text-[20px] text-white"><a href="#">App developers</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Investors</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Blog topics</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Community Events</a></li>
+                        <li class="text-[20px] text-white"><a href="#">Fulfillment</a></li>
+
+                    </ul>
+
+                </div>
+            </nav>
+            <nav class="border-t-[2px] border-t-[#33e2c5]">
+                <div class="custom-container flex justify-between py-4 flex-wrap">
+                    <div class="flex gap-5">
+                        <i class="fa-brands fa-linkedin  text-gray-900 text-[24px]"></i>
+                        <i class="fa-brands fa-square-pinterest  text-gray-900 text-[24px]"></i>
+                        <i class="fa-brands fa-square-instagram  text-gray-900 text-[24px]"></i>
+                        <i class="fa-brands fa-square-facebook  text-gray-900 text-[24px]"></i>
+                        <i class="fa-brands fa-square-twitter  text-gray-900 text-[24px]"></i>
+                        <i class="fa-brands fa-youtube  text-gray-900 text-[22px]"></i>
+                    </div>
+                    <div class="flex items-center gap-5">
+                        <p>Terms of Service</p>
+                        <p>Privacy Policy</p>
+                        <i class="fa-solid fa-globe  text-gray-900 text-[22px]"></i>
+                        <select class="bg-transparent">
+                            <option value="USA"> USA</option>
+                            <option value="USA"> USA</option>
+                            <option value="USA"> USA</option>
+                        </select>
+                    </div>
+                </div>
+            </nav>
+        </footer>
+        <!-- Footer end -->
     </main>
 
 
